=========================================================================
CHANGE LOG
=========================================================================

2008-11-12 Warren L. DeLano <warren@delsci.com>

	* added max_ups setting to govern excessive geometry flux
		
2008-11-10 Warren L. DeLano <warren@delsci.com>

	* further work on the builder
	
	* sculpting engine now respects atom flag 3 (fixed atoms)
	
2008-11-05 Warren L. DeLano <warren@delsci.com>

	* added Mac-only menu for configuring X11 click-through behavior
	
	* updated open-source splash image

2008-10-04 Warren L. DeLano <warren@delsci.com>

	* first rough attempt at IDTF export for U3D / 3D-PDF support
	
2008-09-29 Warren L. DeLano <warren@delsci.com>

	* fixed subtle div-zero bug in the view interpolation code
	
2008-09-24 Warren L. DeLano <warren@delsci.com>

	* fixed crash bug with blank CGO object

2008-09-12

	* added menu option & mechanism for removing plugins

	* fixed bugs with defer_builds_mode 5
	
2008-09-12 Warren L. DeLano <warren@delsci.com>	

	* added multipled FSAA to MacPyMOL
	
	* added experimental defer_builds_mode 5 for trajectory viewing
	
2008-09-07 Warren L. DeLano <warren@delsci.com>

	* improved ability to write images asynchronously as a web server
	
2008-09-05 Warren L. DeLano <warren@delsci.com>

	* fixed a couple of bugs introduced when making changes below
	
2008-08-22 Warren L. DeLano <warren@delsci.com>

	* addressed some performance issues with byres, bychain, & byseg
	
	* added a new cookbook example for a composited multi-clip 
	raytraced image examples/cookbook/multiclip_ray.pml
	
2008-08-21 Warren L. DeLano <warren@delsci.com>

	* fixed indexes output by get_raw_alignment: now 1-based

	* added new cookbook example for grafting selections across
	alignments: examples/cookbook/seq_match_sele.pml

2008-08-04 Warren L. DeLano <warren@delsci.com>

	* added map_auto_expand_sym setting to optionally prevent expansion
	